# gear-academy-intro

./: .gitignore  .gitpod.yml  README.md
01-tamagochi-01-hello-world/: .binpath  lib.rs
01-tamagochi-02-hello-world-gtest/: .binpath
01-tamagochi-04-program-state/: .metahash  Cargo.toml  build.rs  lib.rs  meta.txt
01-tamagochi-04-program-state/io/: Cargo.toml  lib.rs
01-tamagochi-04-program-state/tests/: hello_world_test.rs
01-tamagochi-05-upload-program/: .env  .metahash  Cargo.toml  Makefile  meta.txt
01-tamagochi-05-upload-program/tests/: hello_world_test.rs
01-tamagotchi-01-hello-world/: Cargo.toml  README.md  lib.rs
01-tamagotchi-02-hello-world-gtest/: Cargo.toml  lib.rs
01-tamagotchi-02-hello-world-gtest/tests/: hello_world_test.rs
01-tamagotchi-03-hello-world-advanced/: Cargo.toml  lib.rs
01-tamagotchi-03-hello-world-advanced/tests/: hello_world_test.rs
01-tamagotchi-04-program-state/: .env  Cargo.toml  build.rs  hello_world.meta.txt  lib.rs  meta.txt  read.ts
01-tamagotchi-04-program-state/io/: Cargo.toml  lib.rs
01-tamagotchi-05-upload-program/: .env  .gitignore  Cargo.toml  Makefile  hello_world.meta.txt  lib.rs  meta.txt
01-tamagotchi-05-upload-program/io/: Cargo.toml  lib.rs
01-tamagotchi-05-upload-program/script/: deploy.ts  meta.ts  mod.ts  postMetadata.ts  read.ts  repl.ts  waitForInit.ts  write.ts
01-tamagotchi-06-homework/: .env  .metahash  Cargo.toml  Makefile  lib.rs  meta.txt  tamagotchi.meta.txt
01-tamagotchi-06-homework/io/: Cargo.toml  lib.rs
01-tamagotchi-06-homework/tests/: hello_world_test.rs
