[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[dependencies]
gstd.workspace = true
hello_world_io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
hello_world_io.workspace = true

[dev-dependencies]
gtest.workspace = true

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", features = ["debug"], rev = "v0.3.2"}
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "v0.3.2"}
gmeta = {  git = "https://github.com/gear-tech/gear.git", rev = "v0.3.2" }
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "v0.3.2"}
hello_world_io = { path = "io" }
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }