[package]
name = "tamagotchi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "lib.rs"

[dependencies]
gstd.workspace = true
tamagotchi_io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
tamagotchi_io.workspace = true

[dev-dependencies]
gtest.workspace = true

[workspace.dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "v0.3.2"}
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "v0.3.2"}
gmeta = {  git = "https://github.com/gear-tech/gear.git", rev = "v0.3.2" }
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "v0.3.2"}
tamagotchi_io = { path = "io" }
